--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-    <script src="./scripts.js">
+    <script src="./exercise2.js">
     </script>
 </body>
 </html>
